# code-tour-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
examples/: foo.rs
src/: colours.rs  format.rs  lib.rs
tests/: go.rs
