[package]
name = "code-tour"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ansi_term = "0.12"

[features]
default = ["colours"]
colours = []