[package]
name = "code-tour"
version = "0.1.0"
edition = "2018"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
description = "Enhanced example-based learning, i.e. awesome examples user experience"
homepage = "https://github.com/Hywan/code-tour-rs"
repository = "https://github.com/Hywan/code-tour-rs"
readme = "README.md"
keywords = ["example", "cli", "learning"]
categories = ["development-tools", "rust-patterns", "text-processing", "value-formatting", "visualization"]
autotests = false
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ansi_term = "0.12"

[features]
default = ["colours"]
colours = []