[package]
name = "code-tour"
version = "0.2.0"
edition = "2018"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
description = "Enhanced example-based learning, i.e. awesome examples user experience"
homepage = "https://github.com/Hywan/code-tour-rs"
repository = "https://github.com/Hywan/code-tour-rs"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["example", "cli", "learning"]
categories = ["development-tools", "rust-patterns", "text-processing", "value-formatting", "visualization"]
autotests = false
publish = true
exclude = [
    ".github/*",
    "doc/*.png",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ansi_term = { version = "0.12", optional = true }

[build-dependencies]
rustc_version = "0.2"

[features]
default = ["colours"]
colours = ["ansi_term"]
interactive = []